--- a/sample/workflow/cmis/pom.xml
+++ b/sample/workflow/cmis/pom.xml
@@ -19,7 +19,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.exoplatform.bonita</groupId>
-		<artifactId>exo.bonita.sample</artifactId>
+		<artifactId>exo.bonita.sample.workflow</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>exo.bonita.sample.workflow.cmis</artifactId>
