--- a/sample/workflow/common/pom.xml
+++ b/sample/workflow/common/pom.xml
@@ -22,48 +22,7 @@
 		<artifactId>exo.bonita.sample.workflow</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>exo.bonita.sample.workflow.publication</artifactId>
-	<packaging>pom</packaging>
-	<name>eXo Platform for Bonita - Publication Workflow Sample</name>
-	<description>Content Publication Workflow Sample</description>
-	<profiles>
-		<profile>
-			<id>distrib</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.bonitasoft.connectors</groupId>
-					<artifactId>bonita</artifactId>
-					<version>${bonitasoft.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.exoplatform.bonita</groupId>
-					<artifactId>exo.bonita.sample.workflow.common</artifactId>
-					<version>${project.version}</version>
-				</dependency>
-			</dependencies>
-			<build>
-				<finalName>PublicationProcess-${project.version}.bar</finalName>
-				<plugins>
-					<plugin>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>distribution</id>
-								<phase>package</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-								<configuration>
-									<descriptors>
-										<descriptor>src/main/assembly/publication.xml</descriptor>
-									</descriptors>
-									<appendAssemblyId>false</appendAssemblyId>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+	<artifactId>exo.bonita.sample.workflow.common</artifactId>
+	<packaging>jar</packaging>
+	<name>eXo Platform for Bonita - Workflow Samples common library</name>
 </project>
