--- a/pom.xml
+++ b/pom.xml
@@ -8,45 +8,19 @@
   </parent>
   <groupId>org.exoplatform.platform</groupId>
   <artifactId>exo.platform.bonita.parent</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.x-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>eXo Platform</name>
   <description>Parent POM for platform projects.</description>
   <scm>
-    <connection>scm:svn:http://svn.exoplatform.org/projects/plfbonita/trunk</connection>
-    <developerConnection>scm:svn:http://svn.exoplatform.org/projects/plfbonita/trunk</developerConnection>
+      <connection>scm:git:git://github.com/exoplatform/plf-bonita.git</connection>
+      <developerConnection>scm:git:git@github.com:exoplatform/plf-bonita.git</developerConnection>
+      <url>http://fisheye.exoplatform.org/browse/platform</url>
   </scm>
   <properties>
     <!-- ********************* -->
     <!-- Dependencies versions -->
     <!-- ********************* -->
-    <org.exoplatform.kernel.version>2.3.6-GA</org.exoplatform.kernel.version>
-    <org.exoplatform.core.version>2.4.6-GA</org.exoplatform.core.version>
-    <org.exoplatform.ws.version>2.2.6-GA</org.exoplatform.ws.version>
-    <org.exoplatform.jcr.version>1.14.6-GA</org.exoplatform.jcr.version>
-    <org.exoplatform.jcr-services.version>1.14.6-GA</org.exoplatform.jcr-services.version>
-    <org.exoplatform.portal.version>3.2.3-PLF-SNAPSHOT</org.exoplatform.portal.version>
-    <org.exoplatform.webos.version>2.0.3-SNAPSHOT</org.exoplatform.webos.version>
-    <org.exoplatform.commons.version>1.1.7-SNAPSHOT</org.exoplatform.commons.version>
-    <org.exoplatform.gwtframework.version>1.1.2</org.exoplatform.gwtframework.version>
-    <org.exoplatform.ide.version>1.1.5-SNAPSHOT</org.exoplatform.ide.version>
-    <org.exoplatform.cs.version>2.2.8-SNAPSHOT</org.exoplatform.cs.version>
-    <org.exoplatform.ks.version>2.2.8-SNAPSHOT</org.exoplatform.ks.version>
-    <org.exoplatform.ecms.version>2.3.6-SNAPSHOT</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>1.2.8-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.integ.version>1.0.6-SNAPSHOT</org.exoplatform.integ.version>
-    <org.exoplatform.leadcapture.version>3.4</org.exoplatform.leadcapture.version>
-    <org.crsh.version>1.0.0-beta15</org.crsh.version>
-    <org.exoplatform.exopackage.version>1.1.4</org.exoplatform.exopackage.version>
-    <!-- default workflow engine is bonita. Can also be jbpm -->
-    <exo.workflow.engine>jbpm</exo.workflow.engine>
-    <!-- workflow implementations -->
-    <org.jbpm.jbpm3>3.2.8</org.jbpm.jbpm3>
-    <bonita.version>4.1</bonita.version>
-    <org.mortbay.jetty.cometd-bayeux.version>6.1.11</org.mortbay.jetty.cometd-bayeux.version>
-    <org.mortbay.jetty.cometd-api.version>0.9.20080221</org.mortbay.jetty.cometd-api.version>
-    <org.mortbay.jetty.jetty-util.version>6.1.11</org.mortbay.jetty.jetty-util.version>
-    <commons-digester.version>1.8.1</commons-digester.version>
     <bsh.version>2.0b1</bsh.version>
     <net.oauth.version>20100527</net.oauth.version>
     <net.oauth-consumer.version>20090617</net.oauth-consumer.version>
@@ -120,6 +94,31 @@
     <version.war.plugin>2.1</version.war.plugin>
     <version.wikbook.plugin>0.9.35</version.wikbook.plugin>
     <version.xml.plugin>1.0-beta-3</version.xml.plugin>
+
+
+      <org.exoplatform.webos.version>2.0.5-SNAPSHOT</org.exoplatform.webos.version>
+      <org.exoplatform.commons.version>1.1.9-SNAPSHOT</org.exoplatform.commons.version>
+      <org.exoplatform.gwtframework.version>1.1.2</org.exoplatform.gwtframework.version>
+      <org.exoplatform.ide.version>1.1.7-SNAPSHOT</org.exoplatform.ide.version>
+      <org.exoplatform.cs.version>2.2.10-SNAPSHOT</org.exoplatform.cs.version>
+      <org.exoplatform.ks.version>2.2.10-SNAPSHOT</org.exoplatform.ks.version>
+      <org.exoplatform.ecms.version>2.3.8-SNAPSHOT</org.exoplatform.ecms.version>
+      <org.exoplatform.social.version>1.2.10-SNAPSHOT</org.exoplatform.social.version>
+      <org.exoplatform.integ.version>1.0.8-SNAPSHOT</org.exoplatform.integ.version>
+      <org.exoplatform.leadcapture.version>3.4</org.exoplatform.leadcapture.version>
+      <org.crsh.version>1.0.0-beta15</org.crsh.version>
+      <org.exoplatform.exopackage.version>1.1.4</org.exoplatform.exopackage.version>
+      <org.exoplatform.kernel.version>2.3.8-GA-SNAPSHOT</org.exoplatform.kernel.version>
+      <org.exoplatform.core.version>2.4.8-GA-SNAPSHOT</org.exoplatform.core.version>
+      <org.exoplatform.ws.version>2.2.8-GA-SNAPSHOT</org.exoplatform.ws.version>
+      <org.exoplatform.jcr.version>1.14.8-GA-SNAPSHOT</org.exoplatform.jcr.version>
+      <org.exoplatform.jcr-services.version>1.14.8-GA-SNAPSHOT</org.exoplatform.jcr-services.version>
+      <org.exoplatform.portal.version>3.2.5-PLF-SNAPSHOT</org.exoplatform.portal.version>
+      <org.exoplatform.platform.version>3.5.3</org.exoplatform.platform.version>
+      <org.exoplatform.bpm.bonita.version>5.6.3</org.exoplatform.bpm.bonita.version>
+      <version.release.plugin>2.2.1</version.release.plugin>
+      <version.buildnumber.plugin>1.1</version.buildnumber.plugin>
+      <exo.platform.packaging.tomcat.version>3.5.3</exo.platform.packaging.tomcat.version>
     <!-- ********************* -->
     <!-- Build settings        -->
     <!-- ********************* -->
