PLF-3327 : [Bonita Integration] Update all pom.xml to be compliant with plf3.5.4

--- a/bonita/pom.xml
+++ b/bonita/pom.xml
@@ -21,6 +21,7 @@
 		<module>config</module>
 		<module>portlet</module>
 		<module>migration</module>
+        <module>samples</module>
 	</modules>
 
 </project>
