--- a/bonita/samples/workflow/common/pom.xml
+++ b/bonita/samples/workflow/common/pom.xml
@@ -19,7 +19,7 @@
 	<modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.exoplatform.platform</groupId>
-        <artifactId>exo.platform.bonita.workflow</artifactId>
+        <artifactId>exo.platform.bonita.samples.workflow</artifactId>
         <version>2.0.x-SNAPSHOT</version>
     </parent>
     <artifactId>exo.platform.bonita.samples.workflow.common</artifactId>
