--- a/bonita/samples/workflow/leave/pom.xml
+++ b/bonita/samples/workflow/leave/pom.xml
@@ -19,7 +19,7 @@
 	<modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.exoplatform.platform</groupId>
-        <artifactId>exo.platform.bonita.workflow</artifactId>
+        <artifactId>exo.platform.bonita.samples.workflow</artifactId>
         <version>2.0.x-SNAPSHOT</version>
     </parent>
     <artifactId>exo.platform.bonita.samples.workflow.leave</artifactId>
@@ -36,8 +36,8 @@
 					<version>${org.exoplatform.bpm.bonita.version}</version>
 				</dependency>
 				<dependency>
-					<groupId>org.exoplatform.bonita</groupId>
-					<artifactId>exo.bonita.sample.workflow.common</artifactId>
+					<groupId>org.exoplatform.platform</groupId>
+					<artifactId>exo.platform.bonita.samples.workflow.common</artifactId>
 					<version>${project.version}</version>
 				</dependency>
 			</dependencies>
