--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <!-- ********************* -->
     <jcr.version>1.0</jcr.version>
     <org.hsqldb.version>2.0.0</org.hsqldb.version>
+      <version.docbkx.plugin>2.0.13</version.docbkx.plugin>
       <version.wikbook.plugin>0.9.37</version.wikbook.plugin>
       <org.exoplatform.webos.version>2.0.5-SNAPSHOT</org.exoplatform.webos.version>
       <org.exoplatform.commons.version>1.1.9-SNAPSHOT</org.exoplatform.commons.version>
@@ -59,11 +60,6 @@
       <!-- They aren't yet in parent pom -->
       <plugins>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-archetype-plugin</artifactId>
-          <version>${version.archetype.plugin}</version>
-        </plugin>
-        <plugin>
           <groupId>org.wikbook</groupId>
           <artifactId>wikbook.maven</artifactId>
           <version>${version.wikbook.plugin}</version>
@@ -72,21 +68,6 @@
           <groupId>com.agilejava.docbkx</groupId>
           <artifactId>docbkx-maven-plugin</artifactId>
           <version>${version.docbkx.plugin}</version>
-        </plugin>
-        <plugin>
-          <groupId>com.artofsolving</groupId>
-          <artifactId>jodconverter-maven-plugin</artifactId>
-          <version>${version.jodconverter.plugin}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.jmeter</groupId>
-          <artifactId>maven-jmeter-plugin</artifactId>
-          <version>${version.jmeter.plugin}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>xml-maven-plugin</artifactId>
-          <version>${version.xml.plugin}</version>
         </plugin>
       </plugins>
     </pluginManagement>
