--- a/bonita/samples/workflow/pom.xml
+++ b/bonita/samples/workflow/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.exoplatform.platform</groupId>
         <artifactId>exo.platform.bonita.samples</artifactId>
-        <version>2.0.2.x-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
     <artifactId>exo.platform.bonita.samples.workflow</artifactId>
 	<packaging>pom</packaging>
