--- a/bonita/webapp/pom.xml
+++ b/bonita/webapp/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.exoplatform.platform</groupId>
 		<artifactId>exo.platform.bonita</artifactId>
-		<version>2.0.2.x-SNAPSHOT</version>
+		<version>2.0.0</version>
 	</parent>
 	<artifactId>exo.platform.bonita.webapp</artifactId>
 	<packaging>war</packaging>
