PLF-3357 	Improve UXP of ProcessDocument drive PLF-3349 	Leave Application workflow form : bad field names PLF-3358 	Change BPM gadgets location on intranet home PLF-3359 	bad indentation on BP gadget PLF-3364 	change the Uri of page "BonitaTodo" to "tasks" PLF-3351 	BonitaTODO does not have same l&f as BonitaXP PLF-3352 	message displayed on activity stream is cryptic

--- a/packaging/bonita/pom.xml
+++ b/packaging/bonita/pom.xml
@@ -222,7 +222,18 @@
 										<copy file="${project.basedir}/src/main/resources/webapps/bonita/webapp/WEB-INF/classes/org/bonitasoft/console/public/css/BonitaConsoleExt.css" tofile="${tomcat.webapps.dir}/plf-bonita/WEB-INF/classes/org/bonitasoft/console/public/css/BonitaConsoleExt.css" overwrite="true" />
 										<copy file="${project.basedir}/src/main/resources/webapps/bonita/webapp/console/css/BonitaConsoleExt.css" tofile="${tomcat.webapps.dir}/plf-bonita/console/css/BonitaConsoleExt.css" overwrite="true" />
                                         <copy file="${project.basedir}/src/main/resources/webapps/bonita/webapp/console/gwt/chrome/chrome.css" tofile="${tomcat.webapps.dir}/plf-bonita/console/gwt/chrome/chrome.css" overwrite="true" />
-
+										<copy file="${project.basedir}/src/main/resources/webapps/bonita/webapp/console/BonitaConsole.html" tofile="${tomcat.webapps.dir}/plf-bonita/console/BonitaConsole.html" overwrite="true" />
+										<copy file="${project.basedir}/src/main/resources/webapps/bonita/webapp/console/admin.html" tofile="${tomcat.webapps.dir}/plf-bonita/console/admin.html" overwrite="true" />
+                                        <copy todir="${project.build.directory}/src/main/resources/webapps/bonita/webapp/WEB-INF/classes/org/bonitasoft/console/public">
+                                            <fileset dir="${project.build.directory}/src/main/resources/webapps/bonita/webapp/WEB-INF/classes/org/bonitasoft/console/public" includes="**/*" />
+                                        </copy>
+										
+										<copy todir="${project.basedir}/src/main/resources/webapps/bonita/webapp/console/css">
+                                            <fileset dir="${project.basedir}/src/main/resources/webapps/bonita/webapp/console/css/" includes="**/*" />
+                                        </copy>
+										<copy todir="${project.basedir}/src/main/resources/webapps/bonita/webapp/console/pictures">
+                                            <fileset dir="${project.basedir}/src/main/resources/webapps/bonita/webapp/console/pictures" includes="**/*" />
+                                        </copy>
                                         <copy todir="${tomcat.webapps.dir}/plf-bonita/WEB-INF/lib">
                                             <fileset file="${tomcat.lib.dir}/exo.platform.bonita.component.filter-${project.version}.jar"/>
                                         </copy>
