--- a/bonita/component/services/pom.xml
+++ b/bonita/component/services/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.exoplatform.platform</groupId>
 		<artifactId>exo.platform.bonita.component</artifactId>
-		<version>2.0.0</version>
+		<version>2.0.2.x-snapshot</version>
 	</parent>
 	<artifactId>exo.platform.bonita.component.services</artifactId>
 	<packaging>jar</packaging>
