--- a/bonita/samples/delivery/pom.xml
+++ b/bonita/samples/delivery/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.exoplatform.platform</groupId>
         <artifactId>exo.platform.bonita.samples</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.2.x-snapshot</version>
     </parent>
     <artifactId>exo.platform.bonita.samples.delivery</artifactId>
 	<packaging>pom</packaging>
