--- a/packaging/bonita/pom.xml
+++ b/packaging/bonita/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.exoplatform.platform</groupId>
 		<artifactId>exo.platform.packaging</artifactId>
-		<version>2.0.0</version>
+		<version>2.0.2.x-snapshot</version>
 	</parent>
 	<artifactId>exo.platform.packaging.bonita</artifactId>
 	<packaging>pom</packaging>
